--- a/css/styles.css
+++ b/css/styles.css
@@ -31,11 +31,31 @@ body{
 
 #menu{
   background-image:url("../images/churros.jpg");
-  height: 100%;
+  height: 110%;
   background-size: cover;
 }
 
+@media (max-width: 1400px) {
+  #menu{
+    height: 120%;
+  }
+}
+
+@media (max-width: 890px) {
+  #menu{
+    height: 170%;
+  }
+}
+
+@media (max-width: 725px) {
+  #menu{
+    height: 220%;
+  }
+}
+
+
 #contato{
+  padding-bottom: 1%;
   background-color: #343a40;
 }
 
@@ -63,6 +83,12 @@ body{
   text-shadow: 2px 1px 2px #080808;
 }
 
+@media (max-width: 890px){
+  #titulo-cabecalho{
+    padding-top: 25%;
+  }
+}
+
 #titulo-menu{
   padding-right: 65%;
   color: #F0F8FF;
@@ -80,8 +106,16 @@ table{
   font-family: Montserrat, sans-serif;
   font-size: 28px;
   border-collapse: collapse;
-  margin-left: 3%;
-  width: 43%;
+  width: 40%;
+}
+
+.tabela{
+  padding-right: 10%;
+  padding-left: 10%;
+}
+
+tr:hover{
+  background-color: #343a40;
 }
 
 td, th{
@@ -160,4 +194,14 @@ td, th{
 
 .btn-primary:hover{
   background-color: #ffc458;
+}
+
+/* MAPAS */
+
+@media (max-width: 780px) {
+  #mapa-localizacao{
+    width: 70%;
+    height: 60%;
+    margin-left: 10%;
+  }
 }
